# backend-course

./: Dockerfile  docker-compose.yml  pyproject.toml  pyrightconfig.json
app/: __init__.py  main.py  route.py  service.py
app/core/: security.py
app/dependencies/: security.py
app/enums/: enum_status.py
app/items/: __init__.py  route.py  service.py
app/items/enums/: __init__.py
app/items/schemas/: __init__.py  base.py  create.py  detail.py  out.py  update.py
app/schemas/: __init__.py  base.py  create.py  detail.py  out.py  update.py
app/schemas/items/: base.py  create.py  update.py
app/schemas/price/: __init__.py  price.py
app/schemas/price/enums/: __init__.py  currency.py
app/schemas/tags/: __init__.py  base.py  create.py  internal.py  public.py  update.py
app/users/: __init__.py  router.py  service.py
app/users/schemas/: __init__.py  base.py  create.py  detail.py  out.py  update.py
requests/: main.http
