[project]
name = "backend-course"
version = "0.1.0"
description = "Project where I study backend with fastapi and a course from udemy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "scalar-fastapi>=1.8.2",
    "uvicorn[standard]>=0.48.0",
]


[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.16",
]


